# auto-skill-loader

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
skills/: vision-analysis
src/: server.py
src/auto_skill_loader/: __init__.py  server.py
tests/: test_server.py  validate_skills.py
